# bhd-backend-wrapper

./: Cargo.toml  Makefile  README.md  make_android.bat  make_win_dll_dynamic.bat  shell.nix
godot/: project.godot
godot/native/: game.gdnlib
libs/: ffi.rs  libbhd.h  run_code_gen.bat
rust/: Cargo.toml
rust/src/: game.rs  lib.rs
rust/src/game/: ffilib.rs
